--- a/DiaryWPF/NoteWindow.xaml
+++ b/DiaryWPF/NoteWindow.xaml
@@ -1,13 +1,18 @@
 ﻿<Window x:Class="DiaryWPF.NoteWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Note" Height="220" Width="300">
+        Title="Note" Height="300" Width="300">
     <Grid>
-        <TextBox x:Name="noteTextBox" Grid.Row="1" Margin="5"/>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="10">
-            <Button x:Name="save_btn" Content="OK" Margin="5" Command="{Binding OkCommand}" Click="save_Button_Click"/>
-            <Button Content="Cancel" Margin="5" Command="{Binding CancelCommand}"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <TextBox x:Name="HeaderNote" Text="Note" FontSize="20" FontWeight="Bold" Margin="10"/>
+        <TextBox x:Name="descriptionTextBox" Grid.Row="1" Margin="10" TextWrapping="Wrap" AcceptsReturn="True"/>
+        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="10">
+            <Button x:Name="save_Button" Margin="10" Padding="10,5" Content="Save" Click="save_Button_Click"/>
+            <Button Margin="10" Padding="10,5" Content="Cancel"/>
         </StackPanel>
-        <DatePicker x:Name="calendar" HorizontalAlignment="Left" Margin="10,150,0,0" VerticalAlignment="Top"/>
     </Grid>
 </Window>
